samples/_failures_safe/1761801347_21807b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e466d7f5.c: In function ‘main’:
./samples/SAFE/__tmp_e466d7f5.c:157:21: error: expected ‘;’ at end of input
  157 |             return 1
      |                     ^
      |                     ;
./samples/SAFE/__tmp_e466d7f5.c:157:13: error: expected declaration or statement at end of input
  157 |             return 1
      |             ^~~~~~
./samples/SAFE/__tmp_e466d7f5.c:157:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e466d7f5.c:157:13: error: expected declaration or statement at end of input
